서브메뉴 분야별 수정

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="sub_wrap">
                         <div id="sub_list_wrap_title">
                             <ul class="sub">
-                                <li class="sub_list"><a href="#;">국내도서</a>
+                                <li class="sub_in_title"><a href="#;">국내도서</a>
                                     <div hidden class="sub_all_list_wrap one">
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
@@ -79,7 +79,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="sub_list"><a href="#;">외국도서</a>
+                                <li class="sub_in_title"><a href="#;">외국도서</a>
                                     <div class="sub_all_list_wrap two">
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
@@ -111,7 +111,7 @@
                                             </ul>
                                         </div>
                                     </div></li>
-                                <li class="sub_list"><a href="#;">ebook</a>
+                                <li class="sub_in_title"><a href="#;">ebook</a>
                                     <div class="sub_all_list_wrap four">
                                         <h2 class="sub_title first_sub_title">장르소설</h2>
                                         <div class="sub_list_wrap">
@@ -143,7 +143,7 @@
                                             </ul>
                                         </div>
                                     </li>
-                                <li class="sub_list"><a href="#;">웹소설/코믹</a>
+                                <li class="sub_in_title"><a href="#;">웹소설/코믹</a>
                                     <div class="sub_all_list_wrap three">
                                         <h2 class="sub_title first_sub_title">웹소설</h2>
                                         <div class="sub_list_wrap">
@@ -167,7 +167,7 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                <li class="sub_list"><a href="#;">CD/LP</a>
+                                <li class="sub_in_title"><a href="#;">CD/LP</a>
                                     <div hidden class="sub_all_list_wrap five">
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
@@ -191,7 +191,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                <li class="sub_list"><a href="#;">DVD/Blu-ray</a>
+                                <li class="sub_in_title"><a href="#;">DVD/Blu-ray</a>
                                     <div hidden class="sub_all_list_wrap six">
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
@@ -217,7 +217,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="sub_list"><a href="#;">티켓</a>
+                                <li class="sub_in_title"><a href="#;">티켓</a>
                                     <div hidden class="sub_all_list_wrap seven">
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
@@ -231,7 +231,7 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="sub_list"><a href="#;">문구</a>
+                                <li class="sub_in_title"><a href="#;">문구</a>
                                     <div hidden class="sub_all_list_wrap eight">
                                         <div class="sub_list_wrap">
                                             <ul class="sub">
@@ -249,31 +249,6 @@
                                             <ul class="sub">
                                                 <li class="sub_list"><a href="#;">반려동물</a></li>
                                                 <li class="sub_list"><a href="#;">1인샵</a></li>
-                                            </ul>
-                                        </div>
-                                    </div></li>
-                                <li class="sub_list"><a href="#;">중고샵</a>
-                                    <div hidden class="sub_all_list_wrap nine">
-                                        <div class="sub_list_wrap">
-                                            <ul class="sub">
-                                                <li class="sub_list"><a href="#;">가정과 생활</a></li>
-                                                <li class="sub_list"><a href="#;">국어/외국어</a></li>
-                                                <li class="sub_list"><a href="#;">대학교재</a></li>
-                                                <li class="sub_list"><a href="#;">소설/시</a></li>
-                                                <li class="sub_list"><a href="#;">만화</a></li>
-                                                <li class="sub_list"><a href="#;">비즈니스와 경제</a></li>
-                                                <li class="sub_list"><a href="#;">자기관리</a></li>
-                                                <li class="sub_list"><a href="#;">어린이</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="sub_list_wrap">
-                                            <ul class="sub">
-                                                <li class="sub_list"><a href="#;">유아</a></li>
-                                                <li class="sub_list"><a href="#;">인문</a></li>
-                                                <li class="sub_list"><a href="#;">전집</a></li>
-                                                <li class="sub_list"><a href="#;">중고등참고서</a></li>
-                                                <li class="sub_list"><a href="#;">초등참고서</a></li>
-                                                <li class="sub_list"><a href="#;">외국도서</a></li>
                                             </ul>
                                         </div>
                                     </div>
