--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         </div>
                 </li>
                 <li class="mainmenu_list"><a href="#">중고샵</a>
-                    <!-- <div class="sub_wrap">
+                    <div class="sub_wrap">
                         <ul class="sub">
                             <il class="sub_list"><a href="#;">국내도서</a></il>
                             <il class="sub_list"><a href="#;">외국도서</a></il>
@@ -266,7 +266,7 @@
                             <il class="sub_list"><a href="#;">직배송 중고책</a></il>
                             <il class="sub_list"><a href="#;">중고매장</a></il>
                         </ul>
-                    </div> -->
+                    </div>
                 </li>
                 <li class="mainmenu_list"><a href="#">북클럽</a></li>
                 <li class="mainmenu_list"><a href="#">바이백</a></li>
