--- a/index.html
+++ b/index.html
@@ -257,29 +257,39 @@
                         </div>
                 </li>
                 <li class="mainmenu_list"><a href="#">중고샵</a>
-                    <div class="sub_wrap">
-                        <ul class="sub">
-                            <il class="sub_list"><a href="#;">국내도서</a></il>
-                            <il class="sub_list"><a href="#;">외국도서</a></il>
-                            <il class="sub_list"><a href="#;">음반/DVD</a></il>
-                            <il class="sub_list"><a href="#;">바이백</a></il>
-                            <il class="sub_list"><a href="#;">직배송 중고책</a></il>
-                            <il class="sub_list"><a href="#;">중고매장</a></il>
-                        </ul>
-                    </div>
-                </li>
+                    <div class="sub_all_list_wrap nine">
+                        <div class="sub_list_wrap">
+                            <ul class="sub">
+                                <li class="sub_list"><a href="#;">문학소설</a></li>
+                                <li class="sub_list"><a href="#;">경제경영</a></li>
+                                <li class="sub_list"><a href="#;">인문사회</a></li>
+                                <li class="sub_list"><a href="#;">예술 대중문화</a></li>
+                                <li class="sub_list"><a href="#;">취미/라이프스타일</a></li>
+                                <li class="sub_list"><a href="#;">컴퓨터</a></li>
+                                <li class="sub_list"><a href="#;">자연과학</a></li>
+                                <li class="sub_list"><a href="#;">대학교재 전문서</a></li>
+                            </ul>
+                        </div>
+                        <div class="sub_list_wrap">
+                            <ul class="sub">
+                                <li class="sub_list"><a href="#;">해외잡지</a></li>
+                                <li class="sub_list"><a href="#;">유아/어린이/청소년</a></li>
+                                <li class="sub_list"><a href="#;">캐릭터북</a></li>
+                                <li class="sub_list"><a href="#;">초등코스북</a></li>
+                                <li class="sub_list"><a href="#;">학습서</a></li>
+                                <li class="sub_list"><a href="#;">일본도서</a></li>
+                                <li class="sub_list"><a href="#;">중국도서</a></li>
+                                <li class="sub_list"><a href="#;">프랑스도서</a></li>
+                            </ul>
+                        </div>
+                        <div class="sub_list_wrap">
+                            <ul class="sub">
+                                <li class="sub_list"><a href="#;">Lexile®</a></li>
+                            </ul>
+                        </div></li>
                 <li class="mainmenu_list"><a href="#">북클럽</a></li>
                 <li class="mainmenu_list"><a href="#">바이백</a></li>
-                <li class="mainmenu_list"><a href="#">게시판</a>
-                    <!-- <div class="sub_wrap">
-                        <ul class="sub">
-                            <il class="sub_list"><a href="#;">매장안내</a></il>
-                            <il class="sub_list"><a href="#;">이벤트</a></il>
-                            <il class="sub_list"><a href="#;">1:1문의</a></il>
-                            <il class="sub_list"><a href="#;">자주 묻는 질문</a></il>
-                        </ul>
-                    </div> -->
-                </li>
+                <li class="mainmenu_list"><a href="#">게시판</a></li>
             </ul>
         </section>
     </header>
