--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css' integrity='sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==' crossorigin='anonymous'/>
     <title>Yes24</title>
 </head>
@@ -296,5 +297,27 @@
 </div>
 
 <!--헤더끝-->
+
+<div id="main_wrap">
+    <div id="main_image">
+        <ul id="main_image_list">
+            <li><img src="./images/메인광고이미지1.png" alt="올해의책">
+                <p class="main_image_small_title">책은 "      " 다 !</p>
+                <p class="main_image_big_title">2022<br>올해의 책</p>
+                <p class="main_image_small_title">1천원 상품권 & 북클럽 이용권</p>
+            </li>
+            <li><img src="./images/메인광고이미지2.png" alt="로미오와 줄리엣 유리 티 포트">
+                <p class="main_image_small_title">12월의 굿즈</p>
+                <p class="main_image_big_title">로미오와 줄리엣<br>유리 티 포트</p>
+                <p class="main_image_small_title">고운그림 망토담요/파티빔 프로젝터</p>
+            </li>
+            <li><img src="./images/메인광고이미지3.png" alt="너에게 전화가 왔다">
+                <p class="main_image_small_title">트바로티 김호중 “인생은 뷰티풀” 원작시 수록</p>
+                <p class="main_image_big_title">변함없이 사랑받는 사랑의 언어<br>원태연 20년만의 신작 시집</p>
+                <p class="main_image_small_title">너에게 전화가 왔다/원태연 지음/은행나무</p>
+            </li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
