--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@
     <div id="main_image">
         <ul id="main_image_list">
             <li><img src="./images/메인광고이미지1.png" alt="올해의책">
-                <p class="main_image_small_title">책은 "      " 다 !</p>
+                <p class="main_image_small_title title_up">책은 "      " 다 !</p>
                 <p class="main_image_big_title">2022<br>올해의 책</p>
-                <p class="main_image_small_title">1천원 상품권 & 북클럽 이용권</p>
+                <p class="main_image_small_title title_down">1천원 상품권 & 북클럽 이용권</p>
             </li>
             <li><img src="./images/메인광고이미지2.png" alt="로미오와 줄리엣 유리 티 포트">
-                <p class="main_image_small_title">12월의 굿즈</p>
+                <p class="main_image_small_title title_up">12월의 굿즈</p>
                 <p class="main_image_big_title">로미오와 줄리엣<br>유리 티 포트</p>
-                <p class="main_image_small_title">고운그림 망토담요/파티빔 프로젝터</p>
+                <p class="main_image_small_title title_down">고운그림 망토담요/파티빔 프로젝터</p>
             </li>
             <li><img src="./images/메인광고이미지3.png" alt="너에게 전화가 왔다">
-                <p class="main_image_small_title">트바로티 김호중 “인생은 뷰티풀” 원작시 수록</p>
+                <p class="main_image_small_title title_up">트바로티 김호중 “인생은 뷰티풀” 원작시 수록</p>
                 <p class="main_image_big_title">변함없이 사랑받는 사랑의 언어<br>원태연 20년만의 신작 시집</p>
-                <p class="main_image_small_title">너에게 전화가 왔다/원태연 지음/은행나무</p>
+                <p class="main_image_small_title title_down">너에게 전화가 왔다/원태연 지음/은행나무</p>
             </li>
         </ul>
     </div>
