--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
         </section>
     </header>
 </div>
-
 <!--헤더끝-->
 
+<!--메인시작-->
 <div id="main_wrap">
     <div id="main_image">
         <ul id="main_image_list">
@@ -319,5 +319,65 @@
         </ul>
     </div>
 </div>
+<!--메인끝-->
+
+<!--컨텐츠시작-->
+
+<div id="content_wrap">
+    <section id="today_book_wrap">
+        <ul id="today_book_list">
+            <li>
+                <img src="./images/오늘의책1.png" alt="도토리 문화센터">
+                <div class="today_book_info">
+                    <p class="toady_book_title">도토리 문화센터<br>
+                    글 그림 / 난다</p>
+                    <p class="today_book_price">
+                        정가16,000원<br>
+                        판매가14,400원 (10% 할인)<br>
+                        북클럽머니 최대혜택가 12,900원
+                    </p>
+                </div>
+            </li>
+            <li>
+                <img src="./images/오늘의책2.png" alt="호텔 이야기">
+                <div class="today_book_info">
+                    <p class="toady_book_title">호텔 이야기<br>
+                    임경선 저 / 토스트</p>
+                    <p class="today_book_price">
+                        정가16,000원<br>
+                        판매가14,400원 (10% 할인)<br>
+                        북클럽머니 최대혜택가 12,900원
+                    </p>
+                </div>
+            </li>
+            <li>
+                <img src="./images/오늘의책3.png" alt="목소리가 하는일">
+                <div class="today_book_info">
+                    <p class="toady_book_title">목소리가 하는일<br>
+                    심규혁 저 / 스몰이슈</p>
+                    <p class="today_book_price">
+                        정가16,000원<br>
+                        판매가14,400원 (10% 할인)<br>
+                        북클럽머니 최대혜택가 12,900원
+                    </p>
+                </div>
+            </li>
+            <li>
+                <img src="./images/오늘의책4.png" alt="유난한 도전">
+                <div class="today_book_info">
+                    <p class="toady_book_title">유난한 도전<br>
+                    정경환 저 / 북스톤</p>
+                    <p class="today_book_price">
+                        정가16,000원<br>
+                        판매가14,400원 (10% 할인)<br>
+                        북클럽머니 최대혜택가 12,900원
+                    </p>
+                </div>
+            </li>
+        </ul>
+
+    </div>
+</div>
+
 </body>
 </html>
