컨1중간저장

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 <!--메인시작-->
 <div id="main_wrap">
-    <div id="main_image">
+    <section id="main_image">
         <ul id="main_image_list">
             <li><img src="./images/메인광고이미지1.png" alt="올해의책">
                 <p class="main_image_small_title title_up">책은 "      " 다 !</p>
@@ -325,6 +325,7 @@
 
 <div id="content_wrap">
     <section id="today_book_wrap">
+        <h1 class="today_book_main_title">오늘의 책</h1>
         <ul id="today_book_list">
             <li>
                 <img src="./images/오늘의책1.png" alt="도토리 문화센터">
