컨텐츠2 중간저장

--- a/index.html
+++ b/index.html
@@ -376,8 +376,48 @@
                 </div>
             </li>
         </ul>
-
-    </div>
+    </section>
+    <section id="pick_book_wrap">
+        <ul id="pick_tabmenu">
+            <li id="books_tab" class="tab_btn">
+                <label for="tabmenu1">도서</label>
+                <div class="tab_content">
+                    <div id="tab_side_title_wrap">
+                        <p class="tab_side_title">화제의 책</p>
+                        <p class="tab_side_title">외국도서</p>
+                        <p class="tab_side_title">세트도서</p>
+                    </div>
+                    <h2 class="tab_main_title">베스트Pick</h2>
+                    <ul id="books_pick_list">
+                        <li>
+                            <img src="./images/베스트픽1.png" alt="작은아씨들 정서경 대본집 세트">
+                            <p class="tab_in_up_title"><헤어질 결심> 정서경 작가표 환상동화</p>
+                            <p class="tab_in_info">
+                                작은 아씨들 : 정서경 대본집 세트<br>
+                                정서경 저 | 플레인<br>
+                                43,200원 (10%할인+5%포인트적립)</p>
+                        </li>
+                        <li>
+                            <img src="./images/베스트픽2.png" alt="백유연의 계절 만찬 세트">
+                            <p class="tab_in_up_title">[예스리커버] 백유연의 계절 만찬 세트</p>
+                            <p class="tab_in_info">
+                                [예스리커버] 백유연의 계절 만찬 세트<br>
+                                백유연 글그림 | 웅진주니어<br>
+                                45,900원 (10%할인+5%포인트적립)</p>
+                        </li>
+                        <li>
+                            <img src="./images/베스트픽3.png" alt="타인의 마음">
+                            <p class="tab_in_up_title">저사람은 왜저럴까</p>
+                            <p class="tab_in_info">
+                                타인의 마음<br>
+                                김경일,사피엔스 스튜디오 저 | 샘터<br>
+                                16,200원 (10%할인+5%포인트적립)</p>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </section>
 </div>
 
 </body>
