탭메뉴 라벨설정

--- a/index.html
+++ b/index.html
@@ -377,11 +377,25 @@
             </li>
         </ul>
     </section>
-    <section id="pick_book_wrap">
-        <ul id="pick_tabmenu">
-            <li id="books_tab" class="tab_btn">
-                <label for="tabmenu1">도서</label>
-                <div class="tab_content">
+    <section id="tabmenu_wrap">
+        <input id="book_pick" type="radio" name="tab_item" checked>
+        <label class="tab_item" for="book">도서</label>
+        <input id="ebook_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="ebook">ebook</label>
+        <input id="comic_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="comic">웹소설/코믹</label>
+        <input id="cd_lp_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="cd_lp">CD/LP</label>
+        <input id="dvd_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="dvd">DVD/blur-lay</label>
+        <input id="ticket_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="ticket">티켓</label>
+        <input id="Phrases_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="Phrases">문구</label>
+        <input id="used_pick" type="radio" name="tab_item">
+        <label class="tab_item" for="used">중고샵</label>
+       
+                <!-- <div class="tab_content">
                     <div id="tab_side_title_wrap">
                         <p class="tab_side_title">화제의 책</p>
                         <p class="tab_side_title">외국도서</p>
@@ -414,9 +428,8 @@
                                 16,200원 (10%할인+5%포인트적립)</p>
                         </li>
                     </ul>
-                </div>
-            </li>
-        </ul>
+                </div> -->
+          
     </section>
 </div>
 
