탭 메뉴 수정
클릭시 탭으로 이동되게 ㅇ

--- a/index.html
+++ b/index.html
@@ -379,21 +379,21 @@
     </section>
     <section id="tabmenu_wrap">
         <input id="book_pick" type="radio" name="tab_item" checked>
-        <label class="tab_item" for="book">도서</label>
+        <label class="tab_item" for="book_pick">도서</label>
         <input id="ebook_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="ebook">ebook</label>
+        <label class="tab_item" for="ebook_pick">ebook</label>
         <input id="comic_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="comic">웹소설/코믹</label>
+        <label class="tab_item" for="comic_pick">웹소설/코믹</label>
         <input id="cd_lp_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="cd_lp">CD/LP</label>
+        <label class="tab_item" for="cd_lp_pick">CD/LP</label>
         <input id="dvd_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="dvd">DVD/blur-lay</label>
+        <label class="tab_item" for="dvd_pick">DVD/blur-lay</label>
         <input id="ticket_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="ticket">티켓</label>
+        <label class="tab_item" for="ticket_pick">티켓</label>
         <input id="Phrases_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="Phrases">문구</label>
+        <label class="tab_item" for="Phrases_pick">문구</label>
         <input id="used_pick" type="radio" name="tab_item">
-        <label class="tab_item" for="used">중고샵</label>
+        <label class="tab_item" for="used_pick">중고샵</label>
         <div class="tab_content" id="book_content">
             <div id="tab_side_title_wrap">
                 <p class="tab_side_title">화제의 책</p>
@@ -430,7 +430,7 @@
         </div>
         <div class="tab_content" id="ebook_content">
             <div id="tab_side_title_wrap">
-                <p class="tab_side_title">ㅇㄴㄹㄹㄴㅇ</p>
+                <p class="tab_side_title">냥냥</p>
                 <p class="tab_side_title">외국도서</p>
                 <p class="tab_side_title">세트도서</p>
             </div>
