--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@
         <input id="used_pick" type="radio" name="tab_item">
         <label class="tab_item" for="used_pick">중고샵</label>
         <div class="tab_content" id="book_content">
-            <div id="tab_side_title_wrap">
+            <div class="tab_side_title_wrap">
                 <p class="tab_side_title">화제의 책</p>
                 <p class="tab_side_title">외국도서</p>
                 <p class="tab_side_title">세트도서</p>
             </div>
             <h2 class="tab_main_title">베스트Pick</h2>
-            <ul id="books_pick_list">
+            <ul class="books_pick_list">
                 <li>
                     <img src="./images/베스트픽1.png" alt="작은아씨들 정서경 대본집 세트">
                     <p class="tab_in_up_title"><헤어질 결심> 정서경 작가표 환상동화</p>
@@ -429,36 +429,106 @@
             </ul>
         </div>
         <div class="tab_content" id="ebook_content">
-            <div id="tab_side_title_wrap">
-                <p class="tab_side_title">냥냥</p>
-                <p class="tab_side_title">외국도서</p>
-                <p class="tab_side_title">세트도서</p>
+            <div class="tab_side_title_wrap">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
             </div>
-            <h2 class="tab_main_title">베스트Pick</h2>
-            <ul id="books_pick_list">
+            <h2 class="tab_main_title">화제의 신간 ebook</h2>
+            <ul class="books_pick_list">
                 <li>
-                    <img src="./images/새로나온책1.png" alt="작은아씨들 정서경 대본집 세트">
-                    <p class="tab_in_up_title"><헤어질 결심> 정서경 작가표 환상동화</p>
+                    <img src="./images/ebook1.PNG" alt="겨울 베스트 노부영 그림책 2종세트">
+                    <p class="tab_in_up_title">아이에게 겨울을 읽어 주세요</p>
                     <p class="tab_in_info">
-                        작은 아씨들 : 정서경 대본집 세트<br>
-                        정서경 저 | 플레인<br>
-                        43,200원 (10%할인+5%포인트적립)</p>
+                        겨울 베스트 노부영 그림책 2종 세트<br>
+                        레이먼드 브릭스 저 | Farrar Straus Giroux <br>
+                        16,100원 (30%할인+1%포인트적립)</p>
                 </li>
                 <li>
-                    <img src="./images/베스트픽2.png" alt="백유연의 계절 만찬 세트">
-                    <p class="tab_in_up_title">[예스리커버] 백유연의 계절 만찬 세트</p>
+                    <img src="./images/ebook2.PNG" alt="The Art of Avatar the Way of Water">
+                    <p class="tab_in_up_title">영화보다 먼저 보는 아바타2 공식 아트북!</p>
                     <p class="tab_in_info">
-                        [예스리커버] 백유연의 계절 만찬 세트<br>
-                        백유연 글그림 | 웅진주니어<br>
-                        45,900원 (10%할인+5%포인트적립)</p>
+                        The Art of Avatar the Way of Water<br>
+                        Tara Bennett | DK Publishing (Dorling Kindersley)<br>
+                        48,000원 (36%할인+1%포인트적립)</p>
                 </li>
                 <li>
-                    <img src="./images/베스트픽3.png" alt="타인의 마음">
-                    <p class="tab_in_up_title">저사람은 왜저럴까</p>
+                    <img src="./images/ebook3.PNG" alt="The Entertainer of the Year 2022 BLACKPINK">
+                    <p class="tab_in_up_title">블랙핑크, TIME 올해의 엔터테이너 선정!</p>
                     <p class="tab_in_info">
-                        타인의 마음<br>
-                        김경일,사피엔스 스튜디오 저 | 샘터<br>
-                        16,200원 (10%할인+5%포인트적립)</p>
+                        Time (주간) - Asia Ed. 2022년 12월 26일 : 올해의 엔터테이너 블랙핑크 커버<br>
+                        TIME INC | Time Inc.<br>
+                        11,870원 (5%할인+3%포인트적립)</p>
+                </li>
+            </ul>
+        </div>
+        <div class="tab_content" id="comic_content">
+            <div class="tab_side_title_wrap tab_side_hidden">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
+            </div>
+            <h2 class="tab_main_title">화제의 웹소설</h2>
+            <ul class="books_pick_list">
+                <li>
+                    <img src="./images/코믹1.PNG" alt="남주가 도망을 안간다">
+                    <p class="tab_in_up_title">남주를 학대한 악역 가문의 장녀로 빙의했다.<br>
+                        남주의 폭주와 동시에 죽게 될 운명이라니!</p>
+                    <p class="tab_in_info">
+                        남주가 도망을 안 간다<br>
+                        파민쿠 | 로판 | 4화 무료 | 화당 100원</p>
+                </li>
+                <li>
+                    <img src="./images/코믹2.PNG" alt="꽃 찾으러 왔단다">
+                    <p class="tab_in_up_title">“…나도 향기가 있으면 좋겠구나.”<br>
+                        “저하의 향도 좋아합니다.”
+                    </p>
+                    <p class="tab_in_info">
+                        꽃 찾으러 왔단다<br>
+                        원다 | 로맨스 | 5화무료 | 화당 100원</p>
+                </li>
+                <li>
+                    <img src="./images/코믹3.PNG" alt="뱀파이어는 아카데미 우등생">
+                    <p class="tab_in_up_title">뱀파이어의 먼 후손<br>
+                        게임 속 세상을 구원하다?!</p>
+                    <p class="tab_in_info">
+                        뱀파이어는 아카데미 우등생<br>
+                        XxEx | 판타지 | 25화무료 | 화당 100원</p>
+                </li>
+            </ul>
+        </div>
+        <div class="tab_content" id="cd_lp_content">
+            <div class="tab_side_title_wrap tab_side_hidden">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
+            </div>
+            <h2 class="tab_main_title">화제의 CD/LP</h2>
+            <ul class="books_pick_list">
+                <li>
+                    <img src="./images/cd1.PNG" alt="남주가 도망을 안간다">
+                    <p class="tab_in_up_title">남주를 학대한 악역 가문의 장녀로 빙의했다.<br>
+                        남주의 폭주와 동시에 죽게 될 운명이라니!</p>
+                    <p class="tab_in_info">
+                        남주가 도망을 안 간다<br>
+                        파민쿠 | 로판 | 4화 무료 | 화당 100원</p>
+                </li>
+                <li>
+                    <img src="./images/cd2.PNG" alt="꽃 찾으러 왔단다">
+                    <p class="tab_in_up_title">“…나도 향기가 있으면 좋겠구나.”<br>
+                        “저하의 향도 좋아합니다.”
+                    </p>
+                    <p class="tab_in_info">
+                        꽃 찾으러 왔단다<br>
+                        원다 | 로맨스 | 5화무료 | 화당 100원</p>
+                </li>
+                <li>
+                    <img src="./images/cd3.PNG" alt="뱀파이어는 아카데미 우등생">
+                    <p class="tab_in_up_title">뱀파이어의 먼 후손<br>
+                        게임 속 세상을 구원하다?!</p>
+                    <p class="tab_in_info">
+                        뱀파이어는 아카데미 우등생<br>
+                        XxEx | 판타지 | 25화무료 | 화당 100원</p>
                 </li>
             </ul>
         </div>
