탭메뉴저장5
탭마다 컨텐츠 추가0

--- a/index.html
+++ b/index.html
@@ -403,27 +403,27 @@
             <h2 class="tab_main_title">베스트Pick</h2>
             <ul class="books_pick_list">
                 <li>
-                    <img src="./images/베스트픽1.png" alt="작은아씨들 정서경 대본집 세트">
-                    <p class="tab_in_up_title"><헤어질 결심> 정서경 작가표 환상동화</p>
+                    <img src="./images/베스트1.png" alt="대한민국 금리와 환율의 미래">
+                    <p class="tab_in_up_title">금리와 환율, 한 권이면 OK!</p>
                     <p class="tab_in_info">
-                        작은 아씨들 : 정서경 대본집 세트<br>
-                        정서경 저 | 플레인<br>
-                        43,200원 (10%할인+5%포인트적립)</p>
+                        대한민국 금리와 환율의 미래<br>
+                        김효신 저 | 트러스트북스<br>
+                        19,800원 (10%할인+5%포인트적립)</p>
                 </li>
                 <li>
-                    <img src="./images/베스트픽2.png" alt="백유연의 계절 만찬 세트">
-                    <p class="tab_in_up_title">[예스리커버] 백유연의 계절 만찬 세트</p>
+                    <img src="./images/베스트2.png" alt="마마랜스의 일상 니트">
+                    <p class="tab_in_up_title">갖고 싶은 17가지 니트 디자인 수록</p>
                     <p class="tab_in_info">
-                        [예스리커버] 백유연의 계절 만찬 세트<br>
-                        백유연 글그림 | 웅진주니어<br>
-                        45,900원 (10%할인+5%포인트적립)</p>
+                        마마랜스의 일상 니트<br>
+                        이하니 저 | 한스미디어<br>
+                        19,800원 (10%할인+5%포인트적립)</p>
                 </li>
                 <li>
-                    <img src="./images/베스트픽3.png" alt="타인의 마음">
-                    <p class="tab_in_up_title">저사람은 왜저럴까</p>
+                    <img src="./images/베스트3.png" alt="사피엔스의 깊은 역사">
+                    <p class="tab_in_up_title">우주의 시간으로 본 빅 히스토리</p>
                     <p class="tab_in_info">
-                        타인의 마음<br>
-                        김경일,사피엔스 스튜디오 저 | 샘터<br>
+                        사피엔스의 깊은 역사<br>
+                        송만호,안중호 저 | 바다출판사<br>
                         16,200원 (10%할인+5%포인트적립)</p>
                 </li>
             </ul>
@@ -506,29 +506,143 @@
             <h2 class="tab_main_title">화제의 CD/LP</h2>
             <ul class="books_pick_list">
                 <li>
-                    <img src="./images/cd1.PNG" alt="남주가 도망을 안간다">
-                    <p class="tab_in_up_title">남주를 학대한 악역 가문의 장녀로 빙의했다.<br>
-                        남주의 폭주와 동시에 죽게 될 운명이라니!</p>
+                    <img src="./images/cd1.PNG" alt="마크툽 (MAKTUB) - SPACE OPERA (Red Moon Complete Edition) [투명 오렌지 컬러 2LP]">
+                    <p class="tab_in_up_title">[ 넘버링 한정반 / 180g / 게이트폴드 ]</p>
                     <p class="tab_in_info">
-                        남주가 도망을 안 간다<br>
-                        파민쿠 | 로판 | 4화 무료 | 화당 100원</p>
+                        마크툽 (MAKTUB) - SPACE OPERA (Red Moon Complete Edition) [투명 오렌지 컬러 2LP]<br>
+                        89,100원 (19%할인+1%포인트적립)</p>
                 </li>
                 <li>
-                    <img src="./images/cd2.PNG" alt="꽃 찾으러 왔단다">
-                    <p class="tab_in_up_title">“…나도 향기가 있으면 좋겠구나.”<br>
-                        “저하의 향도 좋아합니다.”
-                    </p>
+                    <img src="./images/cd2.PNG" alt="자우림 - 11집 영원한 사랑 [레드 컬러 LP]">
+                    <p class="tab_in_up_title">레드 컬러 LP</p>
                     <p class="tab_in_info">
-                        꽃 찾으러 왔단다<br>
-                        원다 | 로맨스 | 5화무료 | 화당 100원</p>
+                        자우림 - 11집 영원한 사랑 [레드 컬러 LP]<br>
+                        56,000원 (19%할인+1%포인트적립)</p>
                 </li>
                 <li>
-                    <img src="./images/cd3.PNG" alt="뱀파이어는 아카데미 우등생">
-                    <p class="tab_in_up_title">뱀파이어의 먼 후손<br>
-                        게임 속 세상을 구원하다?!</p>
+                    <img src="./images/cd3.PNG" alt=" 탑 건: 매버릭 영화음악 (Top Gun: Maverick OST) [화이트 컬러 LP]">
+                    <p class="tab_in_up_title">[ 게이트폴드 ]</p>
                     <p class="tab_in_info">
-                        뱀파이어는 아카데미 우등생<br>
-                        XxEx | 판타지 | 25화무료 | 화당 100원</p>
+                        탑 건: 매버릭 영화음악 (Top Gun: Maverick OST) [화이트 컬러 LP]<br>
+                        57,200원 (19%할인+1%포인트적립)</p>
+                </li>
+            </ul>
+        </div>
+        <div class="tab_content" id="dvd_content">
+            <div class="tab_side_title_wrap tab_side_hidden">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
+            </div>
+            <h2 class="tab_main_title">예약 가능한 DVD</h2>
+            <ul class="books_pick_list">
+                <li>
+                    <img src="./images/dvd1.PNG" alt="티켓 투 파라다이스 (1Disc) : 블루레이">
+                    <p class="tab_in_up_title">01월 12일 발매</p>
+                    <p class="tab_in_info">
+                        티켓 투 파라다이스 (1Disc) : 블루레이<br>
+                        31,900원 포인트적립 320원</p>
+                </li>
+                <li>
+                    <img src="./images/dvd2.PNG" alt="불릿 트레인 (2Disc, 4K+BD 렌티큘러 스틸북 한정판) : 블루레이">
+                    <p class="tab_in_up_title">12월 28일 발매</p>
+                    <p class="tab_in_info">
+                        불릿 트레인 (2Disc, 4K+BD 렌티큘러 스틸북 한정판) : 블루레이<br>
+                        47,300원 포인트적립 480원</p>
+                </li>
+                <li>
+                    <img src="./images/dvd3.PNG" alt="유령신부 (1Disc, 슬립케이스 한정판) : 블루레이">
+                    <p class="tab_in_up_title">12월 22일 발매</p>
+                    <p class="tab_in_info">
+                        유령신부 (1Disc, 슬립케이스 한정판) : 블루레이<br>
+                        31,900원 포인트적립 320원</p>
+                </li>
+            </ul>
+        </div>
+        <div class="tab_content" id="ticket_content">
+            <div class="tab_side_title_wrap tab_side_hidden">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
+            </div>
+            <h2 class="tab_main_title">이주의 티켓</h2>
+            <ul class="books_pick_list">
+                <li>
+                    <img src="./images/티켓1.PNG" alt="티켓 투 파라다이스 (1Disc) : 블루레이">
+                    <p class="tab_in_up_title">뮤지컬</p>
+                    <p class="tab_in_info">
+                        우리가 사랑했던 그날</p>
+                </li>
+                <li>
+                    <img src="./images/티켓2.PNG" alt="불릿 트레인 (2Disc, 4K+BD 렌티큘러 스틸북 한정판) : 블루레이">
+                    <p class="tab_in_up_title">뮤지컬</p>
+                    <p class="tab_in_info">
+                        볼륨업</p>
+                </li>
+                <li>
+                    <img src="./images/티켓3.PNG" alt="유령신부 (1Disc, 슬립케이스 한정판) : 블루레이">
+                    <p class="tab_in_up_title">뮤지컬</p>
+                    <p class="tab_in_info">
+                        클림토</p>
+                </li>
+            </ul>
+        </div>
+        <div class="tab_content" id="phrases_content">
+            <div class="tab_side_title_wrap tab_side_hidden">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
+            </div>
+            <h2 class="tab_main_title">추천 문구 Pick</h2>
+            <ul class="books_pick_list">
+                <li>
+                    <img src="./images/문구1.PNG" alt="굿노트 스터디 4분류 노트">
+                    <p class="tab_in_up_title">학습효과를 높히는 4섹션</p>
+                    <p class="tab_in_info">
+                        굿노트 스터디 4분류 노트</p>
+                </li>
+                <li>
+                    <img src="./images/문구2.PNG" alt="다이어리&캘린더 1+1">
+                    <p class="tab_in_up_title">하나사면 하나 더드려요!</p>
+                    <p class="tab_in_info">
+                        다이어리&캘린더 1+1</p>
+                </li>
+                <li>
+                    <img src="./images/문구3.PNG" alt="예스24 빠른배송">
+                    <p class="tab_in_up_title">독서용품 모여라!</p>
+                    <p class="tab_in_info">
+                        예스24 빠른배송</p>
+                </li>
+            </ul>
+        </div>
+        <div class="tab_content" id="used_content">
+            <div class="tab_side_title_wrap tab_side_hidden">
+                <p class="tab_side_title">단행본</p>
+                <p class="tab_side_title">로맨스</p>
+                <p class="tab_side_title">만화</p>
+            </div>
+            <h2 class="tab_main_title">금주의 중고 도서</h2>
+            <ul class="books_pick_list">
+                <li>
+                    <img src="./images/중고샵1.PNG" alt="달러구트 꿈 백화점">
+                    <p class="tab_in_up_title">주문하신 꿈은 매진입니다</p>
+                    <p class="tab_in_info">
+                        달러구트 꿈 백화점<br>
+                        8,970원 (새상품 대비 35%할인)</p>
+                </li>
+                <li>
+                    <img src="./images/중고샵2.PNG" alt="미드나잇 라이브러리">
+                    <p class="tab_in_up_title">인생의 두 번째 기회를 드립니다</p>
+                    <p class="tab_in_info">
+                        미드나잇 라이브러리<br>
+                        10,270원 (새상품 대비 35%할인)</p>
+                </li>
+                <li>
+                    <img src="./images/중고샵3.PNG" alt="그냥 하지 말라">
+                    <p class="tab_in_up_title">당신의 모든 것이 메시지다</p>
+                    <p class="tab_in_info">
+                        그냥 하지 말라<br>
+                        11,390원 (새상품 대비 33%할인)</p>
                 </li>
             </ul>
         </div>
