--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             </ul>
         </div>
         <div class="tab_content" id="ebook_content">
-            <div class="tab_side_title_wrap">
+            <div class="tab_side_title_wrap tab_side_hidden">
                 <p class="tab_side_title">단행본</p>
                 <p class="tab_side_title">로맨스</p>
                 <p class="tab_side_title">만화</p>
@@ -648,28 +648,26 @@
         </div>
     </section>
     <section id="mini_advertisement_wrap">
-        <div id="mini_advertisement">
-            <ul id="mini_advertisement_list">
-                <li>
-                    <div class="mini_advertisement_list_wrap">
-                        <img src="./images/광고1.png" alt="어린이책 선물 캠페인">
-                        <p class="mini_advertisement_text">Yes24 어린이책 선물 캠페인 올가을 천명의 어린이에게 책을 선물합니다</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="mini_advertisement_list_wrap">
-                        <img src="./images/광고2.png" alt="북클러버">
-                        <p class="mini_advertisement_text">한달에 한권, 가장 쉬운 독서습관 만들기 Yes24 독서모임 북클러버</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="mini_advertisement_list_wrap">
-                        <img src="./images/광고3.png" alt="서평단 리뷰어 클럽">
-                        <p class="mini_advertisement_text">서평단 선정시 도서 무료증정! Yes24 서평단 리뷰어 클럽</p>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        <ul id="mini_advertisement_list">
+            <li>
+                <!-- <div class="mini_advertisement_list_wrap yellow_bg"> -->
+                    <img src="./images/광고1.png" alt="어린이책 선물 캠페인">
+                    <p class="mini_advertisement_text">Yes24 어린이책 선물 캠페인 올가을 천명의 어린이에게 책을 선물합니다</p>
+                <!-- </div> -->
+            </li>
+            <li>
+                <!-- <div class="mini_advertisement_list_wrap purple_bg"> -->
+                    <img src="./images/광고2.png" alt="북클러버">
+                    <p class="mini_advertisement_text">한달에 한권, 가장 쉬운 독서습관 만들기 Yes24 독서모임 북클러버</p>
+                <!-- </div> -->
+            </li>
+            <li>
+                <!-- <div class="mini_advertisement_list_wrap blue_bg"> -->
+                    <img src="./images/광고3.png" alt="서평단 리뷰어 클럽">
+                    <p class="mini_advertisement_text">서평단 선정시 도서 무료증정! Yes24 서평단 리뷰어 클럽</p>
+                <!-- </div> -->
+            </li>
+        </ul>
     </section>
 </div>
 
