하단책소개 중간저장1

--- a/index.html
+++ b/index.html
@@ -663,6 +663,30 @@
             </li>
         </ul>
     </section>
+    <section id="book_explanation_wrap">
+        <div id="book_explanation">
+            <ul id="book_explanation_box">
+                <li>
+                    <p class="box_explanation_title">
+                        교과서 속 한자로 어휘력 KEY키우기
+                    </p>
+                    <p class="box_explanation_text">
+                        한자가 어휘력이다
+                    </p>
+                    <img src="./images/하단1.png" alt="한자가 어휘력 이다">
+                </li>
+                <li>
+                    <p class="box_explanation_title">
+                        노벨 문학상 루이즈 글릭 대표 시집
+                    </p>
+                    <p class="box_explanation_text">
+                        미국시 문단의 살아있는 전설
+                    </p>
+                    <img src="./images/하단2.png" alt="야생 붓꽃">
+                </li>
+            </div>
+        </div>
+    </section>
 </div>
 
 </body>
