--- a/index.html
+++ b/index.html
@@ -692,6 +692,31 @@
         </div>
     </section>
 </div>
+<footer>
+    <div id="footer_wrap">
+        <div id="footer_up">
+            <p><a href="#;">회사소개</a></p>
+            <p><a href="#;">인재채용</a></p>
+            <p><a href="#;">이용약관</a></p>
+            <p><a href="#;">개인정보처리방침</a></p>
+            <p><a href="#;">청소년보호정책</a></p>
+            <p><a href="#;">도서홍보안내</a></p>
+            <p><a href="#;">광고안내</a></p>
+            <p><a href="#;">제휴안내</a></p>
+            <p><a href="#;">복지안내</a></p>
+            <p><a href="#;">복지제휴</a></p>
+            <p><a href="#;">매장안내</a></p>
+        </div>
+        <div id="footer_down">
+            <div id="footer_logo">
+                <img src="./images/logo.png" alt="yes24 로고">
+                <p>대한민국 대표 인터넷 서점</p>
+            </div>
+            <div id="footer_info">
+
+            </div>
+        </div>
+</footer>
 
 </body>
 </html>
