--- a/index.html
+++ b/index.html
@@ -713,7 +713,24 @@
                 <p>대한민국 대표 인터넷 서점</p>
             </div>
             <div id="footer_info">
-
+                <h2 id="info_title">예스이십사(주)</h2>
+                <p id="info_text">
+                    서울시 영등포구 은행로 11, 5층~6층(여의도동,일신빌딩)<br>
+                    대표 : 김석환 개인정보보호책임자 : 권민석 yes24help@yes24.com<br>
+                    사업자등록번호 : 229-81-37000<br>
+                    통신판매업신고 : 제 2005-02682호<br>
+                    호스팅 서비스사업자 : 예스이십사(주)<br>
+                    Copyright ⓒ YES24 Corp. All Rights Reserved.<br>
+                </p>
+            </div>
+            <div id="footer_list_ver_info">
+                <ul id="footer_list_wrap">
+                    <li><a href="#;">고객문의</a></li>
+                    <li><a href="#;">도서/음반 1544-3800</a></li>
+                    <li><a href="#;">중고샵 1566-4295</a></li>
+                    <li><a href="#;">티켓예매 1544-6399</a></li>
+                    <li><a href="#;">ebook 1:1 문의</a></li>
+                </ul>
             </div>
         </div>
 </footer>
